--- a/src/Screenie/ui/MainWindow.ui
+++ b/src/Screenie/ui/MainWindow.ui
@@ -283,7 +283,7 @@
      <x>0</x>
      <y>0</y>
      <width>448</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -416,7 +416,7 @@
   </action>
   <action name="exportAction">
    <property name="text">
-    <string>&amp;Export Image</string>
+    <string>&amp;Export Image ...</string>
    </property>
    <property name="toolTip">
     <string>Export Image ...</string>
