--- a/src/Screenie/ui/MainWindow.ui
+++ b/src/Screenie/ui/MainWindow.ui
@@ -367,19 +367,11 @@
    <addaction name="toggleFullScreenAction"/>
   </widget>
   <action name="quitAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/application-exit.png</normaloff>:/img/application-exit.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
   </action>
   <action name="addImageAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/insert-image.png</normaloff>:/img/insert-image.png</iconset>
-   </property>
    <property name="text">
     <string>Image ...</string>
    </property>
@@ -388,28 +380,16 @@
    </property>
   </action>
   <action name="openAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/document-open.png</normaloff>:/img/document-open.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Open ...</string>
    </property>
   </action>
   <action name="saveAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/document-save.png</normaloff>:/img/document-save.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Save</string>
    </property>
   </action>
   <action name="saveAsAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/document-save-as.png</normaloff>:/img/document-save-as.png</iconset>
-   </property>
    <property name="text">
     <string>Save &amp;As ...</string>
    </property>
@@ -431,10 +411,6 @@
    </property>
   </action>
   <action name="addTemplateAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/insert-template.png</normaloff>:/img/insert-template.png</iconset>
-   </property>
    <property name="text">
     <string>Template</string>
    </property>
@@ -443,10 +419,6 @@
    </property>
   </action>
   <action name="toggleFullScreenAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/view-fullscreen.png</normaloff>:/img/view-fullscreen.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Full Screen</string>
    </property>
@@ -460,46 +432,26 @@
    </property>
   </action>
   <action name="cutAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/edit-cut.png</normaloff>:/img/edit-cut.png</iconset>
-   </property>
    <property name="text">
     <string>Cu&amp;t</string>
    </property>
   </action>
   <action name="copyAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/edit-copy.png</normaloff>:/img/edit-copy.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Copy</string>
    </property>
   </action>
   <action name="pasteAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/edit-paste.png</normaloff>:/img/edit-paste.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Paste</string>
    </property>
   </action>
   <action name="deleteAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/edit-delete.png</normaloff>:/img/edit-delete.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;Delete</string>
    </property>
   </action>
   <action name="newAction">
-   <property name="icon">
-    <iconset resource="../../Resources/Resources.qrc">
-     <normaloff>:/img/document-new.png</normaloff>:/img/document-new.png</iconset>
-   </property>
    <property name="text">
     <string>&amp;New</string>
    </property>
@@ -520,8 +472,6 @@
    </property>
   </action>
  </widget>
- <resources>
-  <include location="../../Resources/Resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
