Rewrite of rendering engine as to support alpha images.
- Rendering currently broken!
- Also take alpha chanel of image into account
- Add blend mode which clears to background colour first before blending
- Added initial AppleScript support
- Support "Lion" (Mac OS X 10.7) full screen API
- Compilation probably still fails on "Snow Leopard"!
- Added View menu entries for toggling visibility of side panel and
toolbar
- Note: toolbar visibility not reliable on "Lion" when switching between
  full screen and normal view (especially when enabling toolbar in
  full screen: the toolbar is invisible in normal view, even though the
  Qt API reports it to be visible!)

--- a/src/Screenie/ui/MainWindow.ui
+++ b/src/Screenie/ui/MainWindow.ui
@@ -326,6 +326,8 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
+    <addaction name="showToolBarAction"/>
+    <addaction name="showSidePanelAction"/>
     <addaction name="toggleFullScreenAction"/>
    </widget>
    <widget class="QMenu" name="menu_Edit">
@@ -420,10 +422,13 @@
   </action>
   <action name="toggleFullScreenAction">
    <property name="text">
-    <string>&amp;Full Screen</string>
+    <string>Enter &amp;Full Screen</string>
+   </property>
+   <property name="iconText">
+    <string>Enter Full Screen</string>
    </property>
    <property name="toolTip">
-    <string>View Full Screen</string>
+    <string>Toggle Full Screen</string>
    </property>
   </action>
   <action name="selectAllAction">
@@ -469,6 +474,22 @@
   <action name="aboutAction">
    <property name="text">
     <string>&amp;About</string>
+   </property>
+  </action>
+  <action name="showToolBarAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show &amp;Tool Bar</string>
+   </property>
+  </action>
+  <action name="showSidePanelAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show Side &amp;Panel</string>
    </property>
   </action>
  </widget>
