--- a/src/Screenie/ui/MainWindow.ui
+++ b/src/Screenie/ui/MainWindow.ui
@@ -301,7 +301,7 @@
      <x>0</x>
      <y>0</y>
      <width>448</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -372,8 +372,14 @@
    <addaction name="menu_About"/>
   </widget>
   <widget class="QToolBar" name="toolBar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Tool Bar</string>
+   </property>
+   <property name="movable">
+    <bool>true</bool>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
