--- a/src/Kernel/ui/FilePathModelPropertiesWidget.ui
+++ b/src/Kernel/ui/FilePathModelPropertiesWidget.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>340</width>
-    <height>68</height>
+    <width>460</width>
+    <height>150</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -19,7 +25,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Filepath</string>
+        <string>Filepath:</string>
        </property>
       </widget>
      </item>
