--- a/src/Kernel/ui/GeometryPropertiesWidget.ui
+++ b/src/Kernel/ui/GeometryPropertiesWidget.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>283</width>
-    <height>100</height>
+    <width>460</width>
+    <height>150</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -19,7 +25,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Position</string>
+        <string>Position:</string>
        </property>
       </widget>
      </item>
@@ -63,7 +69,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_7">
        <property name="text">
-        <string>Rotation</string>
+        <string>Rotation:</string>
        </property>
       </widget>
      </item>
@@ -96,7 +102,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>Distance</string>
+        <string>Distance:</string>
        </property>
       </widget>
      </item>
