--- a/src/Kernel/ui/ReflectionPropertiesWidget.ui
+++ b/src/Kernel/ui/ReflectionPropertiesWidget.ui
@@ -93,23 +93,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QComboBox" name="reflectionModeComboBox">
-       <item>
-        <property name="text">
-         <string>None</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Opaque</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Transparent</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="reflectionModeComboBox"/>
      </item>
     </layout>
    </item>
